Output game features and clusters

--- a/src/model/ContentBasedFiltering_Final.ipynb
+++ b/src/model/ContentBasedFiltering_Final.ipynb
@@ -1781,6 +1781,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea11b165",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export feature dataframe with clusters\n",
+    "feature_df_indexed.to_csv('game_features_and_clusters.csv', index=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d434bdc9",
    "metadata": {},
