--- a/src/model/ContentBasedFiltering_BeyondAccuracyMetrics.ipynb
+++ b/src/model/ContentBasedFiltering_BeyondAccuracyMetrics.ipynb
@@ -809,10 +809,7 @@
     "- Cluster coverage = 0.09% to 55.81% -> Some clusters dominate, some are barely represented.\n",
     "- Distributional coverage = 0.485 ->  Among the items that are being recommended, the system distributes recommendations somewhat evenly.\n",
     "\n",
-    "Interpretation:\n",
-    "- Even though the system uses only a small part of the catalog and is uneven across clusters, within the items it actually recommends, it isn’t overly biased toward a few items.\n",
-    "\n",
-    "- The diversity problem is more about coverage (few items/clusters being recommended at all) than distribution (how recommendations are spread among chosen items)."
+    "The model intentionally sacrifices catalog breadth to prioritize relevance and efficiency, achieving strong internal diversity within recommended clusters. While the “rich-get-richer” effect is mitigated within these clusters, it persists across the broader catalog. This low coverage is a deliberate trade-off, resulting from aggressive filtering that limits recommendations to a user’s Top 3 Preferred Clusters, ensuring focused and highly relevant suggestions aligned with established user interests."
    ]
   }
  ],
