improved interpretability of recommendation
mapped back to original game title from initial encoded game id

--- a/src/model/CollaborativeBasedFiltering.ipynb
+++ b/src/model/CollaborativeBasedFiltering.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a58be4b0",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,23 @@
       "2  2022-09-23       en         4.779496  \n",
       "3  2021-09-17       en         4.823064  \n",
       "4  2020-11-27       en         5.000000  \n",
-      "(303871, 10)\n"
+      "(303871, 10)\n",
+      "    gameid                                              title developers  \\\n",
+      "0  3281560         Horror Game To Play With Friends! Playtest        NaN   \n",
+      "1  3280930                            Eternals' Path Playtest        NaN   \n",
+      "2  3280770  ANGST: A TALE OF SURVIVAL - Singleplayer Playtest        NaN   \n",
+      "3  3279790                                   Montabi Playtest        NaN   \n",
+      "4  3278320                                   파이팅걸 유리 Playtest        NaN   \n",
+      "\n",
+      "  publishers genres supported_languages release_date  \n",
+      "0        NaN    NaN                 NaN   2024-10-21  \n",
+      "1        NaN    NaN                 NaN   2024-10-17  \n",
+      "2        NaN    NaN                 NaN   2024-10-13  \n",
+      "3        NaN    NaN                 NaN   2024-10-13  \n",
+      "4        NaN    NaN                 NaN   2024-10-12  \n",
+      "Empty DataFrame\n",
+      "Columns: [gameid, title, developers, publishers, genres, supported_languages, release_date]\n",
+      "Index: []\n"
      ]
     }
    ],
@@ -75,7 +91,10 @@
     "sentiment_df = pd.read_csv('./Processed Data/sentiment_reviews_18oct.csv')\n",
     "print(sentiment_df.head())\n",
     "#print rows\n",
-    "print(sentiment_df.shape)"
+    "print(sentiment_df.shape)\n",
+    "\n",
+    "game_df = pd.read_csv('./Processed Data/games.csv')\n",
+    "print(game_df.head())\n"
    ]
   },
   {
@@ -802,6 +821,98 @@
     "recommendations_df = pd.DataFrame(recommendations_list)\n",
     "recommendations_df.to_csv('collaborative_filtering_recommendations.csv', index=False)\n",
     "print(\"Recommendations saved to 'collaborative_filtering_recommendations.csv'.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4b5d2f9",
+   "metadata": {},
+   "source": [
+    "### Generating a Map from Encoded Game IDs to Titles\n",
+    "\n",
+    "This code creates a mapping from encoded game IDs (used in the model) to map the titles of the games for better interpretability of recommendations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "02557a3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created a new map from 28234 encoded IDs to titles.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "original_to_title_map = pd.Series(game_df.title.values, index=game_df.gameid).to_dict()\n",
+    "\n",
+    "encoded_id_to_title = {}\n",
+    "for encoded_id, original_id in enumerate(item_encoder.classes_):\n",
+    "    \n",
+    "    # Use the original_id to find the title in our first map\n",
+    "    title = original_to_title_map.get(original_id, f\"Unknown Game ID: {original_id}\")\n",
+    "    \n",
+    "    # Store it in our new map\n",
+    "    encoded_id_to_title[encoded_id] = title\n",
+    "\n",
+    "print(f\"Created a new map from {len(encoded_id_to_title)} encoded IDs to titles.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "30a4c940",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   gameid                                title\n",
+      "0   10578                         Synth Riders\n",
+      "1   24189           Ship Graveyard Simulator 2\n",
+      "2   23180                  Wilmot Works It Out\n",
+      "3    4820                            Parkitect\n",
+      "4   10255                               Scalak\n",
+      "5   26568  The Elder Scrolls Online: Gold Road\n",
+      "6    5203                          Aven Colony\n",
+      "7   19846                   Dungeons of Aether\n",
+      "8   26877                  The Great Rebellion\n",
+      "9   24457                     One Armed Bandit\n"
+     ]
+    }
+   ],
+   "source": [
+    "#map back to original game name\n",
+    "import pandas as pd\n",
+    "\n",
+    "def show_top_k_recommendations(player_id, all_recommendations, game_df, k=10):\n",
+    "\n",
+    "    top_k_game_ids = all_recommendations.get(player_id, [])[:k]\n",
+    "    #get game titles from encoded_id_to_title\n",
+    "    top_k_game_titles = [encoded_id_to_title.get(game_id) for game_id in top_k_game_ids]\n",
+    "    recommendations = pd.DataFrame({\n",
+    "        'gameid': top_k_game_ids,\n",
+    "        'title': top_k_game_titles\n",
+    "    })\n",
+    "    \n",
+    "    if not recommendations.empty:\n",
+    "        return recommendations\n",
+    "    else:\n",
+    "        print(f\"No recommendations available for player {player_id}.\")\n",
+    "        return None\n",
+    "\n",
+    "# Example usage\n",
+    "player_id = 2  # Replace with a valid player ID\n",
+    "top_k_recommendations_df = show_top_k_recommendations(player_id, all_recommendations, game_df, k=10)\n",
+    "if top_k_recommendations_df is not None:\n",
+    "    print(top_k_recommendations_df)\n"
    ]
   }
  ],
