--- a/src/model/CollaborativeBasedFiltering.ipynb
+++ b/src/model/CollaborativeBasedFiltering.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c6ce69ed",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,8 @@
     "import numpy as np\n",
     "from torch.utils.data import Dataset, DataLoader, random_split\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from tqdm import tqdm\n"
    ]
   },
   {
@@ -724,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "8aa02ca8",
    "metadata": {},
    "outputs": [
@@ -759,9 +760,6 @@
     }
    ],
    "source": [
-    "\n",
-    "from tqdm import tqdm\n",
-    "\n",
     "# Get a list of all unique players\n",
     "all_relevant_players = list(seen_items_by_user.keys())\n",
     "print(f\"Generating recommendations for {len(all_relevant_players)} players...\")\n",
@@ -866,26 +864,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "id": "30a4c940",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   gameid                                title\n",
-      "0   10578                         Synth Riders\n",
-      "1   24189           Ship Graveyard Simulator 2\n",
-      "2   23180                  Wilmot Works It Out\n",
-      "3    4820                            Parkitect\n",
-      "4   10255                               Scalak\n",
-      "5   26568  The Elder Scrolls Online: Gold Road\n",
-      "6    5203                          Aven Colony\n",
-      "7   19846                   Dungeons of Aether\n",
-      "8   26877                  The Great Rebellion\n",
-      "9   24457                     One Armed Bandit\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Encoded Game ID</th>\n",
+       "      <th>Title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10578</td>\n",
+       "      <td>Synth Riders</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>24189</td>\n",
+       "      <td>Ship Graveyard Simulator 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>23180</td>\n",
+       "      <td>Wilmot Works It Out</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4820</td>\n",
+       "      <td>Parkitect</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10255</td>\n",
+       "      <td>Scalak</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>26568</td>\n",
+       "      <td>The Elder Scrolls Online: Gold Road</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>5203</td>\n",
+       "      <td>Aven Colony</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>19846</td>\n",
+       "      <td>Dungeons of Aether</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>26877</td>\n",
+       "      <td>The Great Rebellion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>24457</td>\n",
+       "      <td>One Armed Bandit</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Encoded Game ID                                Title\n",
+       "0            10578                         Synth Riders\n",
+       "1            24189           Ship Graveyard Simulator 2\n",
+       "2            23180                  Wilmot Works It Out\n",
+       "3             4820                            Parkitect\n",
+       "4            10255                               Scalak\n",
+       "5            26568  The Elder Scrolls Online: Gold Road\n",
+       "6             5203                          Aven Colony\n",
+       "7            19846                   Dungeons of Aether\n",
+       "8            26877                  The Great Rebellion\n",
+       "9            24457                     One Armed Bandit"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -898,8 +976,8 @@
     "    #get game titles from encoded_id_to_title\n",
     "    top_k_game_titles = [encoded_id_to_title.get(game_id) for game_id in top_k_game_ids]\n",
     "    recommendations = pd.DataFrame({\n",
-    "        'gameid': top_k_game_ids,\n",
-    "        'title': top_k_game_titles\n",
+    "        'Encoded Game ID': top_k_game_ids,\n",
+    "        'Title': top_k_game_titles\n",
     "    })\n",
     "    \n",
     "    if not recommendations.empty:\n",
@@ -912,7 +990,7 @@
     "player_id = 2  # Replace with a valid player ID\n",
     "top_k_recommendations_df = show_top_k_recommendations(player_id, all_recommendations, game_df, k=10)\n",
     "if top_k_recommendations_df is not None:\n",
-    "    print(top_k_recommendations_df)\n"
+    "    display(top_k_recommendations_df)\n"
    ]
   }
  ],
