--- a/src/model/CollaborativeBasedFiltering.ipynb
+++ b/src/model/CollaborativeBasedFiltering.ipynb
@@ -863,6 +863,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ac25ff78",
+   "metadata": {},
+   "source": [
+    "### Show Top-K Game Recommendations with Titles\n",
+    "\n",
+    "This function returns the top-k game recommendations for a given player, mapping the encoded game IDs to their respective titles \n",
+    "\n",
+    "\n",
+    "1. **Retrieve Top-K Game IDs**:\n",
+    "   - The function fetches the top-k recommended game IDs for the given `player_id` from the `all_recommendations` dictionary.\n",
+    "\n",
+    "2. **Map Encoded IDs to Game Titles**:\n",
+    "   - It uses the `encoded_id_to_title` dictionary to convert each encoded game ID into its respective game title.\n",
+    "\n",
+    "3. **Return Recommendations**:\n",
+    "   - The function constructs a pandas `DataFrame` that contains the `Encoded Game ID` and `Title` columns for the top-k recommendations.\n",
+    "   \n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "id": "30a4c940",
@@ -991,6 +1013,96 @@
     "top_k_recommendations_df = show_top_k_recommendations(player_id, all_recommendations, game_df, k=10)\n",
     "if top_k_recommendations_df is not None:\n",
     "    display(top_k_recommendations_df)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "723464c9",
+   "metadata": {},
+   "source": [
+    "### Distribution of Recommended Games\n",
+    "\n",
+    "This code calculates and visualizes the distribution of recommended games based on the number of times each game is recommended.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "8d1d4f80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            game_id         count\n",
+      "count   9943.000000   9943.000000\n",
+      "mean   13480.756311     66.033390\n",
+      "std     8118.863506    511.306963\n",
+      "min        2.000000      1.000000\n",
+      "25%     6490.000000      2.000000\n",
+      "50%    13408.000000      5.000000\n",
+      "75%    20298.000000     22.000000\n",
+      "max    28233.000000  29929.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "#distrubution of recommended games\n",
+    "recommendation_counts = {}\n",
+    "for recs in all_recommendations.values():\n",
+    "    for game_id in recs:\n",
+    "        recommendation_counts[game_id] = recommendation_counts.get(game_id, 0) + 1\n",
+    "# Convert to DataFrame for easier analysis\n",
+    "recommendation_counts_df = pd.DataFrame.from_dict(recommendation_counts, orient='index', columns=['count'])\n",
+    "recommendation_counts_df.index.name = 'game_id'\n",
+    "recommendation_counts_df.reset_index(inplace=True)\n",
+    "print(recommendation_counts_df.describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc4d66a4",
+   "metadata": {},
+   "source": [
+    "### Distributional Coverage Calculation for Recommendations\n",
+    "\n",
+    "This code calculates the distributional coverage of game recommendations, measuring how many unique games have been recommended at least a given number of times.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "1581262c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Games recommended at least 1 times: 9943 (35.22%)\n",
+      "Games recommended at least 5 times: 5233 (18.53%)\n",
+      "Games recommended at least 10 times: 3796 (13.44%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_distributional_coverage(all_recommendations, num_games, thresholds=[1, 5, 10]):\n",
+    "    recommendation_counts = {}\n",
+    "    for recs in all_recommendations.values():\n",
+    "        for game_id in recs:\n",
+    "            recommendation_counts[game_id] = recommendation_counts.get(game_id, 0) + 1\n",
+    "\n",
+    "    coverage_results = {}\n",
+    "    for threshold in thresholds:\n",
+    "        covered_games = sum(1 for count in recommendation_counts.values() if count >= threshold)\n",
+    "        coverage_percentage = (covered_games / num_games) * 100\n",
+    "        coverage_results[threshold] = coverage_percentage\n",
+    "        print(f\"Games recommended at least {threshold} times: {covered_games} ({coverage_percentage:.2f}%)\")\n",
+    "    \n",
+    "    return coverage_results\n",
+    "distributional_coverage = calculate_distributional_coverage(all_recommendations, num_games, thresholds=[1, 5, 10])\n"
    ]
   }
  ],
