cleanup of collab and added metrics for recommender

--- a/src/model/CollaborativeBasedFiltering.ipynb
+++ b/src/model/CollaborativeBasedFiltering.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e1d8d9cd",
+   "metadata": {},
+   "source": [
+    "# Collaborative Based Filtering Model for Steam Games"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6ef1c8e4",
    "metadata": {},
    "source": [
-    "# 1. Imports & Setup"
+    "## Imports & Setup"
    ]
   },
   {
@@ -103,7 +111,7 @@
    "id": "e77bacb9",
    "metadata": {},
    "source": [
-    "# 2. Sanity Check"
+    "## Sanity Check"
    ]
   },
   {
@@ -207,7 +215,7 @@
    "id": "4ec4ca42",
    "metadata": {},
    "source": [
-    "# 3. Data Preprocessing"
+    "## Data Preprocessing"
    ]
   },
   {
