rrf fusion ranking added

--- a/src/model/CollaborativeBasedFiltering.ipynb
+++ b/src/model/CollaborativeBasedFiltering.ipynb
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "02557a3f",
    "metadata": {},
    "outputs": [
@@ -849,25 +849,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created a new map from 28234 encoded IDs to titles.\n"
+      "Created a new map from 28234 encoded IDs to their original IDs and titles.\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "#map from original gameid → title\n",
     "original_to_title_map = pd.Series(game_df.title.values, index=game_df.gameid).to_dict()\n",
     "\n",
-    "encoded_id_to_title = {}\n",
-    "for encoded_id, original_id in enumerate(item_encoder.classes_):\n",
-    "    \n",
-    "    # Use the original_id to find the title in our first map\n",
-    "    title = original_to_title_map.get(original_id, f\"Unknown Game ID: {original_id}\")\n",
-    "    \n",
-    "    # Store it in our new map\n",
-    "    encoded_id_to_title[encoded_id] = title\n",
+    "#new mapping of encoded_id → {original_id, title}\n",
+    "encoded_id_to_info = {}\n",
     "\n",
-    "print(f\"Created a new map from {len(encoded_id_to_title)} encoded IDs to titles.\")\n",
-    "\n"
+    "for encoded_id, original_id in enumerate(item_encoder.classes_):\n",
+    "    title = original_to_title_map.get(original_id, f\"Unknown Game ID: {original_id}\")\n",
+    "    encoded_id_to_info[encoded_id] = {\n",
+    "        \"original_id\": original_id,\n",
+    "        \"title\": title\n",
+    "    }\n",
+    "\n",
+    "print(f\"Created a new map from {len(encoded_id_to_info)} encoded IDs to their original IDs and titles.\")\n"
    ]
   },
   {
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 77,
    "id": "30a4c940",
    "metadata": {},
    "outputs": [
@@ -919,59 +919,59 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Encoded Game ID</th>\n",
+       "      <th>Original Game ID</th>\n",
        "      <th>Title</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>10578</td>\n",
+       "      <td>885000</td>\n",
        "      <td>Synth Riders</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>24189</td>\n",
+       "      <td>2201940</td>\n",
        "      <td>Ship Graveyard Simulator 2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>23180</td>\n",
+       "      <td>2060590</td>\n",
        "      <td>Wilmot Works It Out</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4820</td>\n",
+       "      <td>453090</td>\n",
        "      <td>Parkitect</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>10255</td>\n",
+       "      <td>858760</td>\n",
        "      <td>Scalak</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>26568</td>\n",
+       "      <td>2662630</td>\n",
        "      <td>The Elder Scrolls Online: Gold Road</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>5203</td>\n",
+       "      <td>484900</td>\n",
        "      <td>Aven Colony</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>19846</td>\n",
+       "      <td>1668290</td>\n",
        "      <td>Dungeons of Aether</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>26877</td>\n",
+       "      <td>2732820</td>\n",
        "      <td>The Great Rebellion</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>24457</td>\n",
+       "      <td>2239800</td>\n",
        "      <td>One Armed Bandit</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -979,17 +979,17 @@
        "</div>"
       ],
       "text/plain": [
-       "   Encoded Game ID                                Title\n",
-       "0            10578                         Synth Riders\n",
-       "1            24189           Ship Graveyard Simulator 2\n",
-       "2            23180                  Wilmot Works It Out\n",
-       "3             4820                            Parkitect\n",
-       "4            10255                               Scalak\n",
-       "5            26568  The Elder Scrolls Online: Gold Road\n",
-       "6             5203                          Aven Colony\n",
-       "7            19846                   Dungeons of Aether\n",
-       "8            26877                  The Great Rebellion\n",
-       "9            24457                     One Armed Bandit"
+       "   Original Game ID                                Title\n",
+       "0            885000                         Synth Riders\n",
+       "1           2201940           Ship Graveyard Simulator 2\n",
+       "2           2060590                  Wilmot Works It Out\n",
+       "3            453090                            Parkitect\n",
+       "4            858760                               Scalak\n",
+       "5           2662630  The Elder Scrolls Online: Gold Road\n",
+       "6            484900                          Aven Colony\n",
+       "7           1668290                   Dungeons of Aether\n",
+       "8           2732820                  The Great Rebellion\n",
+       "9           2239800                     One Armed Bandit"
       ]
      },
      "metadata": {},
@@ -997,19 +997,23 @@
     }
    ],
    "source": [
-    "#map back to original game name\n",
     "import pandas as pd\n",
     "\n",
-    "def show_top_k_recommendations(player_id, all_recommendations, game_df, k=10):\n",
-    "\n",
-    "    top_k_game_ids = all_recommendations.get(player_id, [])[:k]\n",
-    "    #get game titles from encoded_id_to_title\n",
-    "    top_k_game_titles = [encoded_id_to_title.get(game_id) for game_id in top_k_game_ids]\n",
+    "def show_top_k_recommendations(player_id, all_recommendations, encoded_id_to_info, k=10):\n",
+    "    # Get top-k encoded game IDs for the player\n",
+    "    top_k_encoded_ids = all_recommendations.get(player_id, [])[:k]\n",
+    "    \n",
+    "    # Extract corresponding original IDs and titles\n",
+    "    top_k_original_ids = [encoded_id_to_info.get(game_id, {}).get(\"original_id\") for game_id in top_k_encoded_ids]\n",
+    "    top_k_titles = [encoded_id_to_info.get(game_id, {}).get(\"title\") for game_id in top_k_encoded_ids]\n",
+    "    \n",
+    "    # Create DataFrame\n",
     "    recommendations = pd.DataFrame({\n",
-    "        'Encoded Game ID': top_k_game_ids,\n",
-    "        'Title': top_k_game_titles\n",
+    "        'Original Game ID': top_k_original_ids,\n",
+    "        'Title': top_k_titles\n",
     "    })\n",
     "    \n",
+    "    # Display\n",
     "    if not recommendations.empty:\n",
     "        return recommendations\n",
     "    else:\n",
@@ -1018,9 +1022,144 @@
     "\n",
     "# Example usage\n",
     "player_id = 2  # Replace with a valid player ID\n",
-    "top_k_recommendations_df = show_top_k_recommendations(player_id, all_recommendations, game_df, k=10)\n",
+    "top_k_recommendations_df = show_top_k_recommendations(player_id, all_recommendations, encoded_id_to_info, k=10)\n",
     "if top_k_recommendations_df is not None:\n",
     "    display(top_k_recommendations_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "42258f2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Saved 656,570 rows to 'all_players_top10_recommendations.csv'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Player ID</th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Game ID</th>\n",
+       "      <th>Title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>76561197960266642</td>\n",
+       "      <td>1</td>\n",
+       "      <td>400040</td>\n",
+       "      <td>ShareX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>76561197960266642</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2609610</td>\n",
+       "      <td>CONVRGENCE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>76561197960266642</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1919460</td>\n",
+       "      <td>Seraph's Last Stand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>76561197960266642</td>\n",
+       "      <td>4</td>\n",
+       "      <td>822240</td>\n",
+       "      <td>Animal Jam</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>76561197960266642</td>\n",
+       "      <td>5</td>\n",
+       "      <td>900040</td>\n",
+       "      <td>ELEX II</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Player ID  Rank  Game ID                Title\n",
+       "0  76561197960266642     1   400040               ShareX\n",
+       "1  76561197960266642     2  2609610           CONVRGENCE\n",
+       "2  76561197960266642     3  1919460  Seraph's Last Stand\n",
+       "3  76561197960266642     4   822240           Animal Jam\n",
+       "4  76561197960266642     5   900040              ELEX II"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def recommendations_dict_to_df(all_recommendations, encoded_id_to_info, user_encoder, k=None):\n",
+    "    \"\"\"\n",
+    "    Flatten a dict[user_id -> list[int(encoded_game_id)]] into a long DataFrame\n",
+    "    with columns: Player ID (original), Rank, Game ID, Title.\n",
+    "    \"\"\"\n",
+    "    # Reverse map encoded player IDs → original player IDs\n",
+    "    encoded_to_original_player = {encoded: original for encoded, original in enumerate(user_encoder.classes_)}\n",
+    "\n",
+    "    rows = []\n",
+    "    for encoded_user_id, recs in all_recommendations.items():\n",
+    "        # Map encoded player ID to original\n",
+    "        original_player_id = encoded_to_original_player.get(encoded_user_id, f\"Unknown Player {encoded_user_id}\")\n",
+    "\n",
+    "        if k is not None:\n",
+    "            recs = recs[:k]\n",
+    "        for rank, enc_game_id in enumerate(recs, start=1):\n",
+    "            info = encoded_id_to_info.get(enc_game_id, {})\n",
+    "            original_game_id = info.get(\"original_id\")\n",
+    "            title = info.get(\"title\", f\"Unknown Game ID: {original_game_id}\")\n",
+    "            rows.append((\n",
+    "                original_player_id,  # original player ID\n",
+    "                rank,\n",
+    "                original_game_id,    # original game ID\n",
+    "                title\n",
+    "            ))\n",
+    "    df = pd.DataFrame(rows, columns=['Player ID', 'Rank', 'Game ID', 'Title'])\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "# Build the DataFrame and save it\n",
+    "df_all = recommendations_dict_to_df(all_recommendations, encoded_id_to_info, user_encoder, k=10)\n",
+    "csv_path = \"all_players_top10_recommendations.csv\"\n",
+    "df_all.to_csv(csv_path, index=False)\n",
+    "print(f\"✅ Saved {len(df_all):,} rows to '{csv_path}'\")\n",
+    "\n",
+    "# Optional: peek at a few rows\n",
+    "display(df_all.head())\n"
    ]
   },
   {
@@ -1036,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 78,
    "id": "8d1d4f80",
    "metadata": {},
    "outputs": [
@@ -1081,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 79,
    "id": "1581262c",
    "metadata": {},
    "outputs": [
