Modified data access path for consistency

--- a/src/model/ContentBasedFiltering_BeyondAccuracyMetrics.ipynb
+++ b/src/model/ContentBasedFiltering_BeyondAccuracyMetrics.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "c5f2704d",
    "metadata": {},
    "outputs": [
@@ -128,13 +128,13 @@
     }
    ],
    "source": [
-    "cbf_recommendations = pd.read_csv('recommendations_for_all_players.csv')\n",
+    "cbf_recommendations = pd.read_csv('../datasets/recommendations_for_all_players.csv')\n",
     "cbf_recommendations.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "b225dd80",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
     }
    ],
    "source": [
-    "games_feature_cluster_df = pd.read_csv('game_features_and_clusters.csv')\n",
+    "games_feature_cluster_df = pd.read_csv('../datasets/game_features_and_clusters.csv')\n",
     "games_feature_cluster_df.head()"
    ]
   },
