--- a/src/model/ContentBasedFiltering_Final.ipynb
+++ b/src/model/ContentBasedFiltering_Final.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5b4a4989",
    "metadata": {},
    "outputs": [
@@ -148,13 +148,13 @@
     }
    ],
    "source": [
-    "purchase_df = pd.read_csv('./Processed Data/3_purchase_features.csv')\n",
+    "purchase_df = pd.read_csv('../datasets/3_purchase_features.csv')\n",
     "purchase_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "328f0f0a",
    "metadata": {},
    "outputs": [
@@ -373,13 +373,13 @@
     }
    ],
    "source": [
-    "games_price_df = pd.read_csv('./Processed Data/2_games_prices_merged.csv')\n",
+    "games_price_df = pd.read_csv('../datasets/2_games_prices_merged.csv')\n",
     "games_price_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "70ffdbe6",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
     }
    ],
    "source": [
-    "sentiment_df = pd.read_csv('./Processed Data/sentiment_reviews_18oct.csv')\n",
+    "sentiment_df = pd.read_csv('../datasets/sentiment_reviews_18oct.csv')\n",
     "sentiment_df.head()"
    ]
   },
