changed file source

--- a/src/model/RankFusion.ipynb
+++ b/src/model/RankFusion.ipynb
@@ -43,8 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collaborative_df = pd.read_csv('all_players_top10_recommendations.csv')\n",
-    "content_df = pd.read_csv('recommendations_for_all_players.csv')\n",
+    "collaborative_df = pd.read_csv('../datasets/all_players_top10_recommendations.csv')\n",
+    "content_df = pd.read_csv('../datasets/recommendations_for_all_players.csv')\n",
     "#rename player ID to playerid for merging\n",
     "collaborative_df.rename(columns={'Player ID':'playerid','Rank':'rank','Game ID':'gameid','Title':'title'}, inplace=True)\n",
     "display(collaborative_df.head())"
@@ -246,7 +246,7 @@
     "top_5_df = players_with_both_df.groupby('playerid').head(5)\n",
     "\n",
     "\n",
-    "#output_filename = 'top_5_fused_ranks_per_player.csv'\n",
+    "#output_filename = '../datasets/top_5_fused_ranks_per_player.csv'\n",
     "#top_5_df.to_csv(output_filename, index=False)\n",
     "#print(f\"Successfully saved to {output_filename}\")\n",
     "\n"
