--- a/src/model/CollaborativeBasedFiltering.ipynb
+++ b/src/model/CollaborativeBasedFiltering.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c6ce69ed",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a58be4b0",
    "metadata": {},
    "outputs": [
@@ -88,21 +88,18 @@
       "1        NaN    NaN                 NaN   2024-10-17  \n",
       "2        NaN    NaN                 NaN   2024-10-13  \n",
       "3        NaN    NaN                 NaN   2024-10-13  \n",
-      "4        NaN    NaN                 NaN   2024-10-12  \n",
-      "Empty DataFrame\n",
-      "Columns: [gameid, title, developers, publishers, genres, supported_languages, release_date]\n",
-      "Index: []\n"
+      "4        NaN    NaN                 NaN   2024-10-12  \n"
      ]
     }
    ],
    "source": [
     "# Load processed data\n",
-    "sentiment_df = pd.read_csv('./Processed Data/sentiment_reviews_18oct.csv')\n",
+    "sentiment_df = pd.read_csv('../datasets/sentiment_reviews_18oct.csv')\n",
     "print(sentiment_df.head())\n",
     "#print rows\n",
     "print(sentiment_df.shape)\n",
     "\n",
-    "game_df = pd.read_csv('./Processed Data/games.csv')\n",
+    "game_df = pd.read_csv('../datasets/games.csv')\n",
     "print(game_df.head())\n"
    ]
   },
