updated file source for consistency

--- a/src/model/CollaborativeBasedFiltering.ipynb
+++ b/src/model/CollaborativeBasedFiltering.ipynb
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "42258f2f",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1151,7 @@
     "\n",
     "# Build the DataFrame and save it\n",
     "df_all = recommendations_dict_to_df(all_recommendations, encoded_id_to_info, user_encoder, k=10)\n",
-    "csv_path = \"all_players_top10_recommendations.csv\"\n",
+    "csv_path = \"../datasets/all_players_top10_recommendations.csv\"\n",
     "df_all.to_csv(csv_path, index=False)\n",
     "print(f\"✅ Saved {len(df_all):,} rows to '{csv_path}'\")\n",
     "\n",
