--- a/src/model/RankFusion.ipynb
+++ b/src/model/RankFusion.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "7cd600c8",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
     "fused_results = get_fused_ranks(collaborative_df, ranked_content_df, k=0)\n",
     "\n",
     "#export to csv\n",
-    "fused_results.to_csv('fused_recommendations_all_players.csv', index=False)"
+    "fused_results.to_csv('../datasets/fused_recommendations_all_players.csv', index=False)"
    ]
   },
   {
